--- a/app/src/form/login.ejs
+++ b/app/src/form/login.ejs
@@ -29,7 +29,7 @@
         </div>
   
         <div class="form__field">
-          <input type="submit" value="로그인">
+          <input id="loginBtn" type="submit" value="로그인">
         </div>
   
       </form>
