--- a/app/src/form/login.ejs
+++ b/app/src/form/login.ejs
@@ -12,13 +12,13 @@
 
     <div class="grid">
   
-      <form action="https://httpbin.org/post" method="POST" class="form login">
+      <form method="POST" class="form login">
   
         <div class="form__field">
           <label for="login__username"><svg class="icon">
               <use xlink:href="#icon-user"></use>
             </svg><span class="hidden">Username</span></label>
-          <input id="id" autocomplete="username" id="login__username" type="text" name="username" class="form__input" placeholder="아이디" required>
+          <input id="id" autocomplete="username" type="text" name="username" class="form__input" placeholder="아이디" required>
         </div>
   
         <div class="form__field">
