--- a/app/src/form/register.ejs
+++ b/app/src/form/register.ejs
@@ -12,7 +12,7 @@
 
     <div class="grid">
   
-      <form action="https://httpbin.org/post" method="POST" class="form login">
+      <form method="POST" class="form login">
   
         <div class="form__field">
             <label for="register_name"><svg class="icon">
