--- a/app/src/form/register.ejs
+++ b/app/src/form/register.ejs
@@ -1,78 +1,28 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/login.css">
-    <script src="/pages/register.js" defer></script>
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="stylesheet" href="/css/login.css">
+  <script src="/pages/register.js" defer></script>
+  <title>Document</title>
 </head>
-<body class="align">
-
-    <div class="grid">
-  
-      <form method="POST" class="form login">
-  
-        <div class="form__field">
-            <label for="register_name"><svg class="icon">
-                <use xlink:href="#icon-user"></use>
-              </svg></label>
-            <input id="name" autocomplete="username" type="text" name="username" class="form__input" placeholder="이름" required>
-        </div>
-
-        <div class="form__field">
-          <label for="register_ID"><svg class="icon">
-              <use xlink:href="#icon-user"></use>
-            </svg></label>
-          <input id="id" autocomplete="username" type="text" name="username" class="form__input" placeholder="아이디" required>
-        </div>
-  
-        <div class="form__field">
-          <label for="register_password"><svg class="icon">
-              <use xlink:href="#icon-lock"></use>
-            </svg></label>
-          <input id="password" type="password" name="password" class="form__input" placeholder="비밀번호" required>
-        </div>
-
-        <div class="form__field">
-            <label for="register_passwordc"><svg class="icon">
-                <use xlink:href="#icon-lock"></use>
-              </svg></label>
-            <input id="passwordc" type="password" name="password" class="form__input" placeholder="비밀번호 확인" required>
-        </div>
-
-        <div class="form__field">
-            <label for="register_email"><svg class="icon">
-              </svg></label>
-            <input id="email" type="text" name="email" class="form__input" placeholder="이메일" required>
-        </div>
-  
-        <div class="form__field">
-          <input id="registBtn" type="submit" value="회원가입">
-        </div>
-  
+<body>
+  <div class="login-page">
+    <div class="form">
+      <form class="login-form">
+        <input id="name" type="text" placeholder="이름" required/>
+        <input id="id" type="text" placeholder="아이디" required/>
+        <input id="password" type="password" placeholder="비밀번호" required/>
+        <input id="passwordc" type="password" placeholder="비밀번호 확인" required/>
+        <input id="email" type="email" placeholder="이메일" required/>
+        <p id="button">SIGN UP</p>
+        <p class="message">Already registered? <a href="/login">login</a></p>
       </form>
-  
-      <p class="text--center">이미 회원이 신가요? <a href="/login">로그인</a> <svg class="icon">
-          <use xlink:href="#icon-arrow-right"></use>
-        </svg></p>
-  
     </div>
-  
-    <svg xmlns="http://www.w3.org/2000/svg" class="icons">
-      <symbol id="icon-arrow-right" viewBox="0 0 1792 1792">
-        <path d="M1600 960q0 54-37 91l-651 651q-39 37-91 37-51 0-90-37l-75-75q-38-38-38-91t38-91l293-293H245q-52 0-84.5-37.5T128 1024V896q0-53 32.5-90.5T245 768h704L656 474q-38-36-38-90t38-90l75-75q38-38 90-38 53 0 91 38l651 651q37 35 37 90z" />
-      </symbol>
-      <symbol id="icon-lock" viewBox="0 0 1792 1792">
-        <path d="M640 768h512V576q0-106-75-181t-181-75-181 75-75 181v192zm832 96v576q0 40-28 68t-68 28H416q-40 0-68-28t-28-68V864q0-40 28-68t68-28h32V576q0-184 132-316t316-132 316 132 132 316v192h32q40 0 68 28t28 68z" />
-      </symbol>
-      <symbol id="icon-user" viewBox="0 0 1792 1792">
-        <path d="M1600 1405q0 120-73 189.5t-194 69.5H459q-121 0-194-69.5T192 1405q0-53 3.5-103.5t14-109T236 1084t43-97.5 62-81 85.5-53.5T538 832q9 0 42 21.5t74.5 48 108 48T896 971t133.5-21.5 108-48 74.5-48 42-21.5q61 0 111.5 20t85.5 53.5 62 81 43 97.5 26.5 108.5 14 109 3.5 103.5zm-320-893q0 159-112.5 271.5T896 896 624.5 783.5 512 512t112.5-271.5T896 128t271.5 112.5T1280 512z" />
-      </symbol>
-    </svg>
-  
-  </body>
+  </div>
+</body>
 </html>
 
-<!-- Copyright (c) 2022 by Marco Biedermann (https://codepen.io/marcobiedermann/pen/nbpKWV) -->
+<!-- Copyright (c) 2021 by Aigars Silkalns (https://codepen.io/colorlib/pen/rxddKy) -->
